# pipex

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml
benches/: pipeline_benchmarks.rs
examples/: dynamic_pipeline.rs  pooling.rs  static_pipeline.rs  tuple_chain.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: metrics_aggregation.rs  pipeline_construction.rs  wrapper_composition.rs
src/: chain.rs  deadline.rs  dynamic_pipeline.rs  error.rs  instrument.rs  lib.rs  metrics.rs  pipeline.rs  pool.rs  retry.rs  scratchpad.rs  stage.rs  static_pipeline.rs
tests/: integration.rs  zero_alloc.rs
