[package]
name = "pipex"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Zero-allocation, deterministic pipeline runtime for staged computation in Rust."
license = "MIT"
repository = "https://github.com/Ankithboggaram/pipex"
homepage = "https://github.com/Ankithboggaram/pipex"
readme = "README.md"
keywords = ["pipeline", "zero-allocation", "real-time", "embedded", "inference"]
categories = ["data-structures", "embedded", "concurrency"]

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tracing = "0.1"
parking_lot = "0.12"

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "pipeline_benchmarks"
harness = false
