[package]
name = "pipexec-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.pipexec]
path = ".."

[[bin]]
name = "pipeline_construction"
path = "fuzz_targets/pipeline_construction.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wrapper_composition"
path = "fuzz_targets/wrapper_composition.rs"
test = false
doc = false
bench = false

[[bin]]
name = "metrics_aggregation"
path = "fuzz_targets/metrics_aggregation.rs"
test = false
doc = false
bench = false
